name:          assert-failure
-- The package version. See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:+-+------- breaking API changes
--             | | +----- non-breaking API additions
--             | | | +--- code changes with no API change
version:       0.1.2.0
synopsis:      Syntactic sugar improving 'assert' and 'error'
description:   This library contains syntactic sugar that improves
               the usability of 'assert' and 'error'.
               This is actually a bunch of hacks wrapping the original
               'assert' function, see inside.
               .
               See also <http://hackage.haskell.org/package/loch>,
               <http://hackage.haskell.org/package/assert>
               and <https://ghc.haskell.org/trac/ghc/ticket/5273>.
homepage:      https://github.com/Mikolaj/assert-failure
bug-reports:   https://github.com/Mikolaj/assert-failure/issues
license:       BSD3
license-file:  LICENSE
tested-with:   GHC >= 7.4 && <= 8.2
data-files:    LICENSE, README.md
author:        Mikolaj Konarski
maintainer:    Mikolaj Konarski <mikolaj.konarski@funktory.com>
category:      Control, Contract
build-type:    Simple
cabal-version: >= 1.10

source-repository head
  type:               git
  location:           git://github.com/Mikolaj/assert-failure.git

library
  exposed-modules:    Control.Exception.Assert.Sugar
--  other-modules:
  build-depends:      base                 >= 4        && < 5,
                      text                 >= 0.11.2.3 && < 2,
                      pretty-show          >= 1.6      && < 2

  default-language:   Haskell2010
  default-extensions: MonoLocalBinds, ScopedTypeVariables, OverloadedStrings
                      BangPatterns, RecordWildCards, NamedFieldPuns, MultiWayIf,
                      CPP
  other-extensions:   RankNTypes
  ghc-options:        -Wall -fwarn-orphans -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-unrecognised-pragmas
  ghc-options:        -fno-warn-implicit-prelude -fno-ignore-asserts -fexpose-all-unfoldings -fspecialise-aggressively
